Añadido posicion fixed para el menu de navegación, el contenedor de filtro por publicaciones (categoria) asi siempre seran visibles aunque bajemos en la web y bloque de espaciado sin fondo para obtener un espaciado con respecto a la parte superior de la ventana de la web.

--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
 
 <body class="bg-dark">
     <!-- Barra de Navegación -->
-    <nav class="navbar d-block navbar-dark navbar-expand-lg bg-black bg-opacity-50 shadow">
+    <nav class="navbar d-block navbar-dark navbar-expand-lg bg-black bg-opacity-75 shadow fixed-top">
 
         <div class="container-fluid">
             <a class="navbar-brand ms-auto d-flex justify-content-center align-items-center" href="#">
@@ -83,13 +83,14 @@
             </a>
         </div>
     </nav>
+    <div class="bloque-menu-nav"></div>
     <!-- Contenido -->
     <div class="container-fluid text-light">
         <div class="row">
             <div class="col-3">
 
                 <!-- Contenedor de Categoria-->
-                <div class="row mb-auto">
+                <div class="row mb-auto position-fixed">
                     <div class="container py-3 pb-4 px-5 bg-black bg-opacity-25 shadow-lg mb-5 rounded-bottom">
                         <h4 class="mb-3">Filtrar publicaciones </h4>
                         <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
@@ -288,6 +289,110 @@
                 </div>
  <hr class="">
                 <!-- PUBLICACION 1 -->
+                <div class="card mb-3 w-75" >
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="resources/ejemploPiso1.jpg" class="img-fluid rounded-start"
+                                alt="Imagen de la propiedad">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <span class="caracPubli">Oportunidad</span>
+                                <h2 class="precioPubli">60.000 €</h2>
+                                <p class="tituloPubli">Casa pareada en calle Manuel De Falla</p>
+                                <p class="ubicacionVivPubli">Ítrabo</p>
+                                <p class="infoVivPubli">3 habs. | 1 baño | 87 m²</p>
+                                <p class="descripccionPubli">
+                                    Bonita casa de pueblo en Ítrabo, compuesta por 3 dormitorios, 1 cuarto de baño,
+                                    cocina, salón-comedor, terraza y bodega...
+                                </p>
+                                <div class="contBtnsPubli">
+                                    <button class="btnContactPubli btn btn-primary">Contactar</button>
+                                    <button class="btnMensajePubli btn btn-secondary">Mensaje</button>
+                                    <button class="btn-whatsapp-publi btn btn-success">WhatsApp</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- PUBLICACION 1 -->
+                <div class="card mb-3 w-75" >
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="resources/ejemploPiso1.jpg" class="img-fluid rounded-start"
+                                alt="Imagen de la propiedad">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <span class="caracPubli">Oportunidad</span>
+                                <h2 class="precioPubli">60.000 €</h2>
+                                <p class="tituloPubli">Casa pareada en calle Manuel De Falla</p>
+                                <p class="ubicacionVivPubli">Ítrabo</p>
+                                <p class="infoVivPubli">3 habs. | 1 baño | 87 m²</p>
+                                <p class="descripccionPubli">
+                                    Bonita casa de pueblo en Ítrabo, compuesta por 3 dormitorios, 1 cuarto de baño,
+                                    cocina, salón-comedor, terraza y bodega...
+                                </p>
+                                <div class="contBtnsPubli">
+                                    <button class="btnContactPubli btn btn-primary">Contactar</button>
+                                    <button class="btnMensajePubli btn btn-secondary">Mensaje</button>
+                                    <button class="btn-whatsapp-publi btn btn-success">WhatsApp</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- PUBLICACION 1 -->
+                <div class="card mb-3 w-75" >
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="resources/ejemploPiso1.jpg" class="img-fluid rounded-start"
+                                alt="Imagen de la propiedad">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <span class="caracPubli">Oportunidad</span>
+                                <h2 class="precioPubli">60.000 €</h2>
+                                <p class="tituloPubli">Casa pareada en calle Manuel De Falla</p>
+                                <p class="ubicacionVivPubli">Ítrabo</p>
+                                <p class="infoVivPubli">3 habs. | 1 baño | 87 m²</p>
+                                <p class="descripccionPubli">
+                                    Bonita casa de pueblo en Ítrabo, compuesta por 3 dormitorios, 1 cuarto de baño,
+                                    cocina, salón-comedor, terraza y bodega...
+                                </p>
+                                <div class="contBtnsPubli">
+                                    <button class="btnContactPubli btn btn-primary">Contactar</button>
+                                    <button class="btnMensajePubli btn btn-secondary">Mensaje</button>
+                                    <button class="btn-whatsapp-publi btn btn-success">WhatsApp</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- PUBLICACION 1 -->
+                <div class="card mb-3 w-75" >
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="resources/ejemploPiso1.jpg" class="img-fluid rounded-start"
+                                alt="Imagen de la propiedad">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <span class="caracPubli">Oportunidad</span>
+                                <h2 class="precioPubli">60.000 €</h2>
+                                <p class="tituloPubli">Casa pareada en calle Manuel De Falla</p>
+                                <p class="ubicacionVivPubli">Ítrabo</p>
+                                <p class="infoVivPubli">3 habs. | 1 baño | 87 m²</p>
+                                <p class="descripccionPubli">
+                                    Bonita casa de pueblo en Ítrabo, compuesta por 3 dormitorios, 1 cuarto de baño,
+                                    cocina, salón-comedor, terraza y bodega...
+                                </p>
+                                <div class="contBtnsPubli">
+                                    <button class="btnContactPubli btn btn-primary">Contactar</button>
+                                    <button class="btnMensajePubli btn btn-secondary">Mensaje</button>
+                                    <button class="btn-whatsapp-publi btn btn-success">WhatsApp</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- PUBLICACION 1 -->
                 <div class="card mb-3 w-75" >
                     <div class="row g-0">
                         <div class="col-md-4">
